Documentation edits made through Mintlify web editor

--- a/index.mdx
+++ b/index.mdx
@@ -1,6 +1,6 @@
 ---
-title: "PixelVerse Support"
-description: "Welcome to the new home for your documentation"
+title: "Welcome to PixelVerse Support"
+description: "Welcome to the centralised support centre for all PixelVerseIT & Hayden Lab products. "
 ---
 
 ## Setting up
