--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -75,6 +75,34 @@ Now that you have your docs running, explore these key features:
 
 </CardGroup>
 
+## Learn more about PixelVerseIT
+
+Meet the agency and products powering these docs.
+
+<CardGroup cols={2}>
+
+<Card title="PixelVerseIT" icon="building" href="https://pixelverse.tech/">
+  Adelaide-based digital agency led by Hayden Kong, delivering web design, e-commerce, custom AI systems, and IT support for startups, creators, and small businesses.
+</Card>
+
+<Card title="PixelVerseAI" icon="sparkles" href="https://ai.pixelverse.tech/">
+  Unified AI workspace featuring PixelVerseAI Chats with multi-model comparisons, media uploads, templates, and privacy-first workflows for power users.
+</Card>
+
+<Card title="HelloAI" icon="robot" href="https://helloai.pixelverse.tech/">
+  Everyday AI chat that brings ChatGPT-class capabilities at roughly half the cost, offering fast responses, guided writing, and research help straight from the browser.
+</Card>
+
+<Card title="PixelVerse Forms" icon="file-lines" href="https://forms.pixelverse.tech/">
+  Schema-less form backend in private preview with Supabase storage, Resend-powered notifications, spam protection, and developer-friendly APIs.
+</Card>
+
+<Card title="PixelVerse Links" icon="link" href="https://links.pixelverse.tech/">
+  Central hub for the latest PixelVerse resources, product launches, and community announcements.
+</Card>
+
+</CardGroup>
+
 <Note>
   **Need help?** See our [full documentation](https://mintlify.com/docs) or join our [community](https://mintlify.com/community).
 </Note>
