--- a/index.mdx
+++ b/index.mdx
@@ -3,51 +3,31 @@ title: "Welcome to PixelVerse Support"
 description: "Welcome to the centralised support centre for all PixelVerseIT & Hayden Lab products. "
 ---
 
-## Setting up
+## I need help with:
 
-Get your documentation site up and running in minutes.
+<CardGroup cols={1}>
 
-<Card title="Start here" icon="rocket" horizontal href="/quickstart">
-  Follow our three step quickstart guide.
+<Card title="PixelVerseIT" icon="building" href="https://pixelverse.tech/">
+  Adelaide-based digital agency led by Hayden Kong, delivering web design, e-commerce, custom AI systems, and IT support for startups, creators, and small businesses.
 </Card>
 
-## Make it yours
+<Card title="PixelVerseAI" icon="sparkles" href="https://ai.pixelverse.tech/">
+  Unified AI workspace featuring PixelVerseAI Chats with multi-model comparisons, media uploads, templates, and privacy-first workflows for power users.
+</Card>
 
-Design a docs site that looks great and empowers your users.
+<Card title="HelloAI" icon="robot" href="https://helloai.pixelverse.tech/">
+  Everyday AI chat that brings ChatGPT-class capabilities at roughly half the cost, offering fast responses, guided writing, and research help straight from the browser.
+</Card>
 
-<Columns cols={2}>
-  <Card title="Edit locally" icon="pen-to-square" href="/development">
-    Edit your docs locally and preview them in real time.
-  </Card>
-  <Card title="Customize your site" icon="palette" href="/essentials/settings">
-    Customize the design and colors of your site to match your brand.
-  </Card>
-  <Card title="Set up navigation" icon="map" href="/essentials/navigation">
-    Organize your docs to help users find what they need and succeed with your product.
-  </Card>
-  <Card title="API documentation" icon="terminal" href="/api-reference/introduction">
-    Auto-generate API documentation from OpenAPI specifications.
-  </Card>
-</Columns>
+<Card title="PixelVerse Forms" icon="file-lines" href="https://forms.pixelverse.tech/">
+  Schema-less form backend in private preview with Supabase storage, Resend-powered notifications, spam protection, and developer-friendly APIs.
+</Card>
 
-## Create beautiful pages
+<Card title="PixelVerse Links" icon="link" href="https://links.pixelverse.tech/">
+  Central hub for the latest PixelVerse resources, product launches, and community announcements.
+</Card>
 
-Everything you need to create world-class documentation.
-
-<Columns cols={2}>
-  <Card title="Write with MDX" icon="pen-fancy" href="/essentials/markdown">
-    Use MDX to style your docs pages.
-  </Card>
-  <Card title="Code samples" icon="code" href="/essentials/code">
-    Add sample code to demonstrate how to use your product.
-  </Card>
-  <Card title="Images" icon="image" href="/essentials/images">
-    Display images and other media.
-  </Card>
-  <Card title="Reusable snippets" icon="recycle" href="/essentials/reusable-snippets">
-    Write once and reuse across your docs.
-  </Card>
-</Columns>
+</CardGroup>
 
 ## Need inspiration?
 
