--- a/index.mdx
+++ b/index.mdx
@@ -1,32 +1,26 @@
 ---
 title: "Welcome to PixelVerse Support"
-description: "Welcome to the centralised support centre for all PixelVerseIT & Hayden Lab products. "
+description: "Welcome to the centralised support centre for all PixelVerseIT & Hayden Labs products and services. Here, you can find the latest information to help you - otherwise, please email our team over at support@pixelverse.tech. "
 ---
 
 ## I need help with:
 
 <CardGroup cols={1}>
-
-<Card title="PixelVerseIT" icon="building" href="https://pixelverse.tech/">
-  Adelaide-based digital agency led by Hayden Kong, delivering web design, e-commerce, custom AI systems, and IT support for startups, creators, and small businesses.
-</Card>
-
-<Card title="PixelVerseAI" icon="sparkles" href="https://ai.pixelverse.tech/">
-  Unified AI workspace featuring PixelVerseAI Chats with multi-model comparisons, media uploads, templates, and privacy-first workflows for power users.
-</Card>
-
-<Card title="HelloAI" icon="robot" href="https://helloai.pixelverse.tech/">
-  Everyday AI chat that brings ChatGPT-class capabilities at roughly half the cost, offering fast responses, guided writing, and research help straight from the browser.
-</Card>
-
-<Card title="PixelVerse Forms" icon="file-lines" href="https://forms.pixelverse.tech/">
-  Schema-less form backend in private preview with Supabase storage, Resend-powered notifications, spam protection, and developer-friendly APIs.
-</Card>
-
-<Card title="PixelVerse Links" icon="link" href="https://links.pixelverse.tech/">
-  Central hub for the latest PixelVerse resources, product launches, and community announcements.
-</Card>
-
+  <Card title="PixelVerseIT" icon="building" href="https://pixelverse.tech/">
+    Adelaide-based digital agency led by Hayden Kong, delivering web design, e-commerce, custom AI systems, and IT support for startups, creators, and small businesses.
+  </Card>
+  <Card title="PixelVerseAI" icon="sparkles" href="https://ai.pixelverse.tech/">
+    Unified AI workspace featuring PixelVerseAI Chats with multi-model comparisons, media uploads, templates, and privacy-first workflows for power users.
+  </Card>
+  <Card title="HelloAI" icon="robot" href="https://helloai.pixelverse.tech/">
+    Everyday AI chat that brings ChatGPT-class capabilities at roughly half the cost, offering fast responses, guided writing, and research help straight from the browser.
+  </Card>
+  <Card title="PixelVerse Forms" icon="file-lines" href="https://forms.pixelverse.tech/">
+    Schema-less form backend in private preview with Supabase storage, Resend-powered notifications, spam protection, and developer-friendly APIs.
+  </Card>
+  <Card title="PixelVerse Links" icon="link" href="https://links.pixelverse.tech/">
+    Central hub for the latest PixelVerse resources, product launches, and community announcements.
+  </Card>
 </CardGroup>
 
 ## Need inspiration?
