Documentation edits made through Mintlify web editor

--- a/index.mdx
+++ b/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Welcome to PixelVerse Support"
+title: "Hayden Labs Support"
 description: "Welcome to the centralised support centre for all PixelVerseIT & Hayden Labs products and services. Here, you can find the latest information to help you - otherwise, please email our team over at support@pixelverse.tech. "
 ---
 
