--- a/index.mdx
+++ b/index.mdx
@@ -1,19 +1,19 @@
 ---
-title: "Hayden Labs Support"
-description: "Welcome to the centralised support centre for all PixelVerseIT & Hayden Labs products and services. Here, you can find the latest information to help you - otherwise, please email our team over at support@pixelverse.tech. "
+title: "PixelVerse Support"
+description: "Welcome to the centralised support centre for all PixelVerseIT, PixelVerseAI & Hayden Labs products and services. Here, you can find the latest information to help you - otherwise, please email our team over at support@pixelverse.tech. "
 ---
 
 ## I need help with:
 
 <CardGroup cols={1}>
-  <Card title="PixelVerseIT" icon="building" href="https://pixelverse.tech/">
-    Adelaide-based digital agency led by Hayden Kong, delivering web design, e-commerce, custom AI systems, and IT support for startups, creators, and small businesses.
-  </Card>
   <Card title="PixelVerseAI" icon="sparkles" href="https://ai.pixelverse.tech/">
     Unified AI workspace featuring PixelVerseAI Chats with multi-model comparisons, media uploads, templates, and privacy-first workflows for power users.
   </Card>
   <Card title="HelloAI" icon="robot" href="https://helloai.pixelverse.tech/">
     Everyday AI chat that brings ChatGPT-class capabilities at roughly half the cost, offering fast responses, guided writing, and research help straight from the browser.
+  </Card>
+  <Card title="PixelVerseIT" icon="building" href="https://pixelverse.tech/">
+    Adelaide-based digital agency led by Hayden Kong, delivering web design, e-commerce, custom AI systems, and IT support for startups, creators, and small businesses.
   </Card>
   <Card title="PixelVerse Forms" icon="file-lines" href="https://forms.pixelverse.tech/">
     Schema-less form backend in private preview with Supabase storage, Resend-powered notifications, spam protection, and developer-friendly APIs.
@@ -23,8 +23,17 @@ description: "Welcome to the centralised support centre for all PixelVerseIT & H
   </Card>
 </CardGroup>
 
-## Need inspiration?
 
-<Card title="See complete examples" icon="stars" href="https://mintlify.com/customers">
-  Browse our showcase of exceptional documentation sites.
-</Card>
+<section className="text-center my-16">
+  <h2 className="text-xl font-medium mb-2">Unsure where to ask?</h2>
+  <p className="text-gray-500 mb-6">
+    We’re here to help - reach out anytime and we’ll point you in the right direction.
+  </p>
+  <a
+    href="mailto:support@pixelverse.tech"
+    className="text-sm text-gray-700 underline hover:text-black transition"
+  >
+    support@pixelverse.tech
+  </a>
+</section>
+
