Documentation edits made through Mintlify web editor

--- a/index.mdx
+++ b/index.mdx
@@ -29,10 +29,7 @@ description: "Welcome to the centralised support centre for all PixelVerseIT, Pi
   <p className="text-gray-500 mb-6">
     We’re here to help - reach out anytime and we’ll point you in the right direction.
   </p>
-  <a
-    href="mailto:support@pixelverse.tech"
-    className="text-sm text-gray-700 underline hover:text-black transition"
-  >
+  <a href="mailto:support@pixelverse.tech">
     support@pixelverse.tech
   </a>
 </section>
