Documentation edits made through Mintlify web editor

--- a/index.mdx
+++ b/index.mdx
@@ -7,19 +7,19 @@ mode: "wide"
 ## I need help with:
 
 <CardGroup cols={2}>
-  <Card title="PixelVerseAI" icon="sparkles" href="https://ai.pixelverse.tech/">
+  <Card title="PixelVerseAI" icon="sparkles" href="/pixelverseai">
     Unified AI workspace featuring PixelVerseAI Chats with multi-model comparisons, media uploads, templates, and privacy-first workflows for power users.
   </Card>
-  <Card title="HelloAI" icon="robot" href="https://helloai.pixelverse.tech/">
+  <Card title="HelloAI" icon="robot" href="/helloai">
     Everyday AI chat that brings ChatGPT-class capabilities at roughly half the cost, offering fast responses, guided writing, and research help straight from the browser.
   </Card>
-  <Card title="PixelVerseIT" icon="building" href="https://pixelverse.tech/">
+  <Card title="PixelVerseIT" icon="building" href="https://pixelverse.tech/contact">
     Adelaide-based digital agency led by Hayden Kong, delivering web design, e-commerce, custom AI systems, and IT support for startups, creators, and small businesses.
   </Card>
-  <Card title="PixelVerse Forms" icon="file-lines" href="https://forms.pixelverse.tech/">
+  <Card title="PixelVerse Forms" icon="file-lines" href="/platforms">
     Schema-less form backend in private preview with Supabase storage, Resend-powered notifications, spam protection, and developer-friendly APIs.
   </Card>
-  <Card title="PixelVerse Links" icon="link" href="https://links.pixelverse.tech/">
+  <Card title="PixelVerse Links" icon="link" href="/platforms">
     Central hub for the latest PixelVerse resources, product launches, and community announcements.
   </Card>
 </CardGroup>
