Documentation edits made through Mintlify web editor

--- a/helloai/welcome.mdx
+++ b/helloai/welcome.mdx
@@ -1,5 +1,19 @@
 ---
-title: 'New file'
-description: 'Description of your new file.'
+title: "Welcome to HelloAI"
 ---
 
+
+## I need help with:
+
+<Card title="How to use HelloAI" icon="i-cursor" cta="View Now">
+  The simple guide on how to navigate and send your first chat on HelloAI
+</Card>
+<Card title="Billing & Subscription" icon="i-cursor" cta="View Now">
+  Information on billing & subscritions for HelloAI
+</Card>
+<Card title="Privacy & Accounts" icon="i-cursor" cta="View Now">
+  How we handle your information & accounts for HelloAI
+</Card>
+<Card title="Updates & Changelog" icon="i-cursor" cta="View Now">
+  View latest features & updates on HelloAI
+</Card>
