--- a/helloai/welcome.mdx
+++ b/helloai/welcome.mdx
@@ -5,15 +5,18 @@ title: "Welcome to HelloAI"
 
 ## I need help with:
 
-<Card title="How to use HelloAI" icon="i-cursor" cta="View Now">
+<Card title="How to use HelloAI" icon="i-book-open" cta="View Now">
   The simple guide on how to navigate and send your first chat on HelloAI
 </Card>
-<Card title="Billing & Subscription" icon="i-cursor" cta="View Now">
-  Information on billing & subscritions for HelloAI
+
+<Card title="Billing & Subscription" icon="i-credit-card" cta="View Now">
+  Information on billing & subscriptions for HelloAI
 </Card>
-<Card title="Privacy & Accounts" icon="i-cursor" cta="View Now">
+
+<Card title="Privacy & Accounts" icon="i-lock" cta="View Now">
   How we handle your information & accounts for HelloAI
 </Card>
-<Card title="Updates & Changelog" icon="i-cursor" cta="View Now">
+
+<Card title="Updates & Changelog" icon="i-activity" cta="View Now">
   View latest features & updates on HelloAI
 </Card>
