--- a/helloai/welcome.mdx
+++ b/helloai/welcome.mdx
@@ -2,21 +2,20 @@
 title: "Welcome to HelloAI"
 ---
 
-
 ## I need help with:
 
-<Card title="How to use HelloAI" icon="i-book-open" cta="View Now">
+<Card title="How to use HelloAI" icon="arrow-pointer" cta="View Now">
   The simple guide on how to navigate and send your first chat on HelloAI
 </Card>
 
-<Card title="Billing & Subscription" icon="i-credit-card" cta="View Now">
+<Card title="Billing & Subscription" icon="credit-card" cta="View Now">
   Information on billing & subscriptions for HelloAI
 </Card>
 
-<Card title="Privacy & Accounts" icon="i-lock" cta="View Now">
+<Card title="Privacy & Accounts" icon="shield-keyhole" cta="View Now">
   How we handle your information & accounts for HelloAI
 </Card>
 
-<Card title="Updates & Changelog" icon="i-activity" cta="View Now">
+<Card title="Updates & Changelog" icon="clipboard-list" cta="View Now">
   View latest features & updates on HelloAI
 </Card>
