Documentation edits made through Mintlify web editor

--- a/index.mdx
+++ b/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: "PixelVerse Support"
+title: "PixelVerse Support & Documentation"
 description: "Welcome to the centralised support centre for all PixelVerseIT, PixelVerseAI & Hayden Labs products and services. Here, you can find the latest information to help you - otherwise, please email our team over at support@pixelverse.tech. "
 mode: "wide"
 ---
