Documentation edits made through Mintlify web editor

--- a/index.mdx
+++ b/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: "PixelVerse Support"
-description: "Welcome to the centralised support centre for all PixelVerseIT, PixelVerseAI & Hayden Labs products and services. Here, you can find the latest information to help you - otherwise, please email our team over at support@pixelverse.tech. "
+description: "Welcome to the centralised support centre for all PixelVerseIT, PixelVerseAI & Hayden Labs products and services. Here, you can find the latest information to help you - otherwise, please email our team over at support@pixelverse.tech."
 mode: "wide"
 ---
 
@@ -24,14 +24,18 @@ mode: "wide"
   </Card>
 </CardGroup>
 
-
 <section className="text-center my-16">
-  <h2 className="text-xl font-medium mb-2">Unsure where to ask?</h2>
-  <p className="text-gray-500 mb-6">
-    We’re here to help - reach out anytime and we’ll point you in the right direction.
-  </p>
-  <a href="mailto:support@pixelverse.tech">
-    support@pixelverse.tech
-  </a>
-</section>
+<h2 className="text-xl font-medium mb-2 text-center">
+Unsure where to ask?</h2>
 
+<p className="text-gray-500 mb-6">
+We’re here to help - reach out anytime and we’ll point you in the right direction.
+
+</p>
+
+<a href="mailto:support@pixelverse.tech">
+[support@pixelverse.tech](mailto:support@pixelverse.tech)
+
+</a>
+
+</section>
