--- a/pixelverseai/welcome.mdx
+++ b/pixelverseai/welcome.mdx
@@ -1,6 +1,22 @@
 ---
-title: 'New file'
-description: 'Description of your new file.'
+title: "Welcome to PixelVerseAI Support"
+mode: "wide"
 ---
 
-test
+View our products & website at https://ai.pixelverse.tech
+
+Products & Services covered here:
+
+<Columns cols={3}>
+  <Card title="General" icon="house-blank" href="/pixelverseai/general" cta="View Now">
+    Support resources, product information, and release updates
+  </Card>
+  <Card title="Chats" icon="message" href="/pixelverseai/chats" cta="View Now">
+    Complete guides and documentation for PixelVerseAI Chats
+  </Card>
+  <Card title="Labs" icon="flask" href="/pixelverseai/labs" cta="View Now">
+    Explore features and capabilities of PixelVerseAI Labs
+  </Card>
+</Columns>
+
+Check out our guides to use our services by navigating on the left sidebar. Reach out to our team at [support@pixelverse.tech](mailto:support@pixelverse.tech) if you need assistance, or reach us via live chat/form for paid users.
