Documentation edits made through Mintlify web editor

--- a/pixelverseai/chats/signup.mdx
+++ b/pixelverseai/chats/signup.mdx
@@ -1,5 +1,4 @@
 ---
-title: 'New file'
-description: 'Description of your new file.'
+title: "Sign Up"
+description: "Description of your new file."
 ---
-
