--- a/pixelverseai/welcome.mdx
+++ b/pixelverseai/welcome.mdx
@@ -1,6 +1,6 @@
 ---
-title: "Welcome to PixelVerseAI Support"
-mode: "wide"
+title: "PixelVerseAI Support"
+mode: "custom"
 ---
 
 View our products & website at https://ai.pixelverse.tech
