--- a/pixelverseai/general/about-us.mdx
+++ b/pixelverseai/general/about-us.mdx
@@ -1,5 +1,4 @@
 ---
-title: 'New file'
-description: 'Description of your new file.'
+title: "About Us"
+description: "Description of your new file."
 ---
-
