--- a/pixelverseai/labs/start-guide.mdx
+++ b/pixelverseai/labs/start-guide.mdx
@@ -1,5 +1,4 @@
 ---
-title: 'New file'
-description: 'Description of your new file.'
+title: "Start Guide"
+description: "Description of your new file."
 ---
-
