Documentation edits made through Mintlify web editor

--- a/pixelverseai/welcome.mdx
+++ b/pixelverseai/welcome.mdx
@@ -1,11 +1,13 @@
 ---
 title: "PixelVerseAI Support"
-mode: "custom"
+mode: "wide"
 ---
 
 View our products & website at https://ai.pixelverse.tech
 
-Products & Services covered here:
+Products & Services covered here are shown below.
+
+## I need help with:
 
 <Columns cols={3}>
   <Card title="General" icon="house-blank" href="/pixelverseai/general" cta="View Now">
