Documentation edits made through Mintlify web editor

--- a/helloai/welcome.mdx
+++ b/helloai/welcome.mdx
@@ -1,21 +1,27 @@
 ---
-title: "Welcome to HelloAI"
+title: "HelloAI Support"
+mode: "wide"
 ---
 
 ## I need help with:
 
-<Card title="How to use HelloAI" icon="arrow-pointer" cta="View Now">
-  The simple guide on how to navigate and send your first chat on HelloAI
-</Card>
+<Columns cols={2}>
+  <Card title="How to use HelloAI" icon="arrow-pointer" cta="View Now">
+    The simple guide on how to navigate and send your first chat on HelloAI
+  </Card>
+  <Card title="Billing & Subscription" icon="credit-card" cta="View Now">
+    Information on billing & subscriptions for HelloAI
+  </Card>
+  <Card title="Privacy & Accounts" icon="shield-keyhole" cta="View Now">
+    How we handle your information & accounts for HelloAI
+  </Card>
+  <Card title="Updates & Changelog" icon="clipboard-list" cta="View Now">
+    View latest features & updates on HelloAI
+  </Card>
+</Columns>
 
-<Card title="Billing & Subscription" icon="credit-card" cta="View Now">
-  Information on billing & subscriptions for HelloAI
-</Card>
+<Info>
+  Need Additional help? 
 
-<Card title="Privacy & Accounts" icon="shield-keyhole" cta="View Now">
-  How we handle your information & accounts for HelloAI
-</Card>
-
-<Card title="Updates & Changelog" icon="clipboard-list" cta="View Now">
-  View latest features & updates on HelloAI
-</Card>
+  Click your profile on the bottom left and then "Support". You can also email us at [support@pixelverse.tech](mailto:support@pixelverse.tech) 
+</Info>
