Documentation edits made through Mintlify web editor

--- a/platforms/forms/onboarding.mdx
+++ b/platforms/forms/onboarding.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Client Onboarding'
+title: "Client Onboarding"
 ---
 
 Document PXVS-F02 - Last updated: 23 August 2025
@@ -12,11 +12,13 @@ This article will cover:
 4. Anti-spam protection
 5. Sample Email
 
-> TLDR:
->
-> PixelVerse Forms is already set up for you! From now on, when a visitor submits the contact form on your website, both you and the visitor will get a email with the submission details. From then on, it acts like an regular email chain. You can respond to the confirmation email to reply to the visitor.
->
-> **No additional cost is required, as you are an existing PixelVerseIT client :)**
+<Info>
+  **TLDR:**
+
+  \
+  PixelVerse Forms is already set up for you! From now on, when a visitor submits the contact form on your website, both you and the visitor will get a email with the submission details. From then on, it acts like an regular email chain. You can respond to the confirmation email to reply to the visitor.\
+  No additional cost is required, as you are an existing PixelVerseIT client :)
+</Info>
 
 ## About PixelVerse Forms
 
@@ -38,7 +40,9 @@ This ensures smooth, direct communication with your website visitors, just like 
 
 ## PixelVerse Forms - Dashboard & No-codeReq
 
-> Let us know if you are interested in accessing this feature!
+<Info>
+  Let us know if you are interested in accessing this feature!
+</Info>
 
 PixelVerse Forms also comes with a **no-code embed feature**, making it easy to add forms to any website without touching code.
 
@@ -52,9 +56,11 @@ We reduce spam by using **honeypot fields**. These are invisible fields added to
 
 This way, your inbox stays clear of unwanted messages without adding extra friction for real visitors.
 
-> We don’t send confirmation emails (both to you and the “visitor”/bot) to submissions marked as spam. However, all spam submissions are marked and can be viewed in the PixelVerse Forms dashboard.
->
-> Real humans will never fill in honeypot fields, as they are hidden and invisible in the page.
+<Info>
+  We don’t send confirmation emails (both to you and the “visitor”/bot) to submissions marked as spam. However, all spam submissions are marked and can be viewed in the PixelVerse Forms dashboard.
+
+  Real humans will never fill in honeypot fields, as they are hidden and invisible in the page.
+</Info>
 
 ## Sample email
 
@@ -64,7 +70,11 @@ PixelVerse Forms notifications emails are sent from [forms@emails.pixelverse.tec
 
 ![Screenshot_2025-08-23_at_8.37.34_pm.png](/images/Screenshot_2025-08-23_at_8.37.34_pm.png)
 
-If you have any questions, please reach out to us at [hello@pixelverse.tech](mailto:hello@pixelverse.tech) and we will assist you there!
+If you have any questions, please reach out to us via the contact method established!
+
+<Warning>
+  This guide is intended only for PixelVerseIT clients for Website Design/Dev/Managment and does not apply to the general public. If you are interseted in using PixelVerse Forms for your own applications or website, please reach out to us at [hello@pixelverse.tech](mailto:hello@pixelverse.tech) during our beta trial.
+</Warning>
 
 Thank you!
 
